--- a/commom/spring-security/pom.xml
+++ b/commom/spring-security/pom.xml
@@ -28,6 +28,18 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>provided </scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
